@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* translate\_back\_locations; tlstm now in rpred
 * Legacy clstm now integrated
 * added network.outputs for compatibility
 * New TlstmSeqRecognizer\_legacy for compatibility with the ancient clstm version used in kraken
